--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
   "PyYAML>=6.0.1",
   "ipyflow>=0.0.130",
   "numpy>=1.26.3",
+  "dotenv>=0.9.9",
 ]
 description = "AI-assisted debugging. Uses AI to answer 'why'."
 readme = "README.md"
